ansible/20_manage_master/templates/deploy_ingress.j2.yml
---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: goapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: goapp-service
                port:
                  number: 80
